# Spear

./: Cargo.toml  LICENSE  README.md  download_icons.py  install.sh
data/applications/: com.antigravity.spear.desktop
src/: layer_shell.rs  main.rs  plugin_manager.rs  settings.rs  utils.rs  window.rs
src/plugins/: apps.rs  calc.rs  clipboard.rs  colors.rs  emojis.rs  file_manager.rs  files.rs  fonts.rs  gnome_sys.rs  mod.rs  packages.rs  recent.rs  run_cmd.rs  web.rs  window_mgmt.rs  window_switcher.rs  youtube.rs
