[package]
name = "spear"
version = "0.1.0"
edition = "2021"
description = "Raycast-like launcher for GNOME built with Rust and Libadwaita"
license = "MIT"

[[bin]]
name = "spear"
path = "src/main.rs"

[[bin]]
name = "install"
path = "src/bin/install.rs"

[dependencies]
gtk4 = "0.9"
libadwaita = "0.7"
glib = "0.20"
gio = { version = "0.20", features = ["v2_80"] }
gdk4 = "0.9"
async-channel = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.deb]
name = "spear"
maintainer = "Atharva <atharva@example.com>"
extended-description = "Raycast-like launcher for GNOME built with Rust and Libadwaita"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/spear", "usr/bin/spear", "755"],
    ["icons/*", "usr/share/spear/icons/", "644"]
]

[package.metadata.generate-rpm]
name = "spear"
summary = "Raycast-like launcher for GNOME"
description = "Raycast-like launcher for GNOME built with Rust and Libadwaita"
license = "MIT"
assets = [
    { source = "target/release/spear", dest = "/usr/bin/spear", mode = "755" },
    { source = "icons/*", dest = "/usr/share/spear/icons/", mode = "644" }
]
